# QuickPool

./: run_quickpool.sh
benchmark/: quickpool_intersection.cpp
src/: CMakeLists.txt
src/quickpool/: ED_eval.cpp  ED_eval.h  ED_offline_eval.cpp  Intersection_eval.cpp
test/: quickpool_intersect.cpp
